--- a/package.json
+++ b/package.json
@@ -10,29 +10,40 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@gluestack-ui/alert": "^0.1.16",
+    "@gluestack-ui/avatar": "^0.1.18",
+    "@gluestack-ui/button": "^1.0.13",
+    "@gluestack-ui/divider": "^0.1.10",
+    "@gluestack-ui/form-control": "^0.1.19",
     "@gluestack-ui/icon": "^0.1.25",
+    "@gluestack-ui/input": "^0.1.37",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.21",
     "@gluestack-ui/toast": "^1.0.9",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@supabase/supabase-js": "^2.49.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.37",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.477.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
-    "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1",
-    "react-native-svg": "^15.11.2",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-notifications": "~0.29.13",
+    "expo-device": "~7.0.2",
+    "expo-constants": "~17.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
